@@ -32,7 +32,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mockito;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -58,7 +59,7 @@ public class EventsTest {
 
     @Test
     public void testDoesNotDuplicateEventsWithPriority() {
-        when(mockPartition.group(mockEvent)).thenReturn(List.of(".1.3.6.1.2.1.10.166.3"));
+        when(mockPartition.group(mockEvent)).thenReturn(Collections.unmodifiableList(Arrays.asList(".1.3.6.1.2.1.10.166.3")));
 
         events.addEvent(mockEvent);
         when(mockEvent.getPriority()).thenReturn(1);
